<resources>
    <string name="app_name">DataBindingSample</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="demo_simple">Simple</string>
    <string name="demo_list">List</string>

    <string name="demo_list_add_item">Add item</string>
    <string name="demo_list_remove_item">Remove item</string>

    <string name="demo_inverse">Two-way binding</string>
    <string name="welcome">Hello %s</string>

    <string name="demo_expression">Expression</string>

    <string name="demo_animation">Animation</string>
    <string name="show_image">Show image</string>

    <string name="demo_lambda">Lambda</string>

    <string name="demo_inject">Injection</string>

    <string name="fire">Fire %s</string>
    <string name="employ">Employ %s</string>

    <string name="change_component">Change Component</string>

</resources>
