<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.github.markzhai.databindingsample.MainActivity.Presenter"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{presenter.onClickSimpleDemo}"
            android:text="@string/demo_simple"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{presenter.onClickListDemo}"
            android:text="@string/demo_list"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{presenter.onClickTwoWayDemo}"
            android:text="@string/demo_inverse"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{presenter.onClickExpressionDemo}"
            android:text="@string/demo_expression"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{presenter.onClickAnimationDemo}"
            android:text="@string/demo_animation"/>

    </LinearLayout>

</layout>